--- a/index.html
+++ b/index.html
@@ -45,7 +45,54 @@
       </div>
       <!-- end social-icon -->
       <!-- fashion label -->
+      <div class="fashion">
+        FASHION
+      </div>
       <!-- end fashion label -->
+      <!-- product info -->
+      <div class="col-5 z-index-99">
+         <div class="info">
+            <div class="product-info">
+                <h1>
+                    CREA<span class="text-yellow">TIVE</span>
+                </h1>
+                <h1>
+                    <span class="text-yellow">DE</span>SIGN
+                </h1>
+                <span>
+                    Collection 2023
+                </span>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat perferendis explicabo, animi totam aliquid obcaecati rem corrupti. Animi, maxime sapiente reprehenderit eum sed, voluptatum amet dolorem placeat, consequuntur impedit illo?  
+                </p>
+                <button>
+                    Shop now
+                </button>
+            </div>
+        </div>
+      </div>
+      <!-- end product info -->
+      <!-- product image slide -->
+      <div class="col-7">
+        <!-- slider -->
+        <div class="slider">
+            <div class="slide">
+                <div class="img-holder" style="background-image: url(./static/images/dom-hill-nimElTcTNyY-unsplash.jpg);"></div>
+            </div>
+            <div class="slide">
+                <div class="img-holder" style="background-image: url(./static/images/luobulinka-FO4mQZi1c0M-unsplash.jpg);"></div>
+            </div>
+            <div class="slide">
+                <div class="img-holder" style="background-image: url(./static/images/dillon-kydd-gbbsmERXCUg-unsplash.jpg);"></div>
+            </div>
+            <div class="slide">
+                <div class="img-holder" style="background-image: url(./static/images/laura-chouette-d7wSG9uPev4-unsplash.jpg);"></div>
+            </div>
+        </div>
+        <!-- end slider -->
+      </div>
+      <!-- end product image slide -->
+
     </div>
 
     <script src="./static/js/main.js"></script>
