create a product info

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <!-- product info -->
       <div class="col-5 z-index-99">
          <div class="info">
+            <!-- info 1 -->
             <div class="product-info">
                 <h1>
                     CREA<span class="text-yellow">TIVE</span>
@@ -69,6 +70,64 @@
                     Shop now
                 </button>
             </div>
+             <!-- end info 1 -->
+             <!-- info 2 -->
+            <div class="product-info">
+                <h1>
+                    <span class="text-yellow">passion</span>nate
+                </h1>
+                <h1>
+                    pur<span class="text-yellow">swit</span>
+                </h1>
+                <span>
+                    Collection 2023
+                </span>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat perferendis explicabo, animi totam aliquid obcaecati rem corrupti. Animi, maxime sapiente reprehenderit eum sed, voluptatum amet dolorem placeat, consequuntur impedit illo?  
+                </p>
+                <button>
+                    Shop now
+                </button>
+            </div>
+             <!-- end info 2 -->
+             <!-- info 3 -->
+            <div class="product-info">
+                <h1>
+                    <span class="text-yellow">BE</span>
+                </h1>
+                <h1>
+                    <span class="text-yellow">You</span>rself
+                </h1>
+                <span>
+                    Collection 2023
+                </span>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat perferendis explicabo, animi totam aliquid obcaecati rem corrupti. Animi, maxime sapiente reprehenderit eum sed, voluptatum amet dolorem placeat, consequuntur impedit illo?  
+                </p>
+                <button>
+                    Shop now
+                </button>
+            </div>
+             <!-- end info 3 -->
+             <!-- info 4 -->
+            <div class="product-info">
+                <h1>
+                    <span class="text-yellow">GO</span>LD
+                </h1>
+                <h1>
+                    STY<span class="text-yellow">LE</span>SIGN
+                </h1>
+                <span>
+                    Collection 2023
+                </span>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat perferendis explicabo, animi totam aliquid obcaecati rem corrupti. Animi, maxime sapiente reprehenderit eum sed, voluptatum amet dolorem placeat, consequuntur impedit illo?  
+                </p>
+                <button>
+                    Shop now
+                </button>
+            </div>
+             <!-- end info 4 -->
         </div>
       </div>
       <!-- end product info -->
@@ -92,6 +151,11 @@
         <!-- end slider -->
       </div>
       <!-- end product image slide -->
+      <!-- slide control -->
+      <div class="slide-control z-index-99">
+        <i class="bx bxs-right-arrow"></i>
+      </div>
+      <!-- end slide control -->
 
     </div>
 
