--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="overlay"></div>
       <!-- top nav -->
       <div class="nav">
-        <div class="menu">
+        <div class="menu" onClick = "openNav()"> 
           <div class="hamburger"></div>
         </div>
         <div class="logo">TUAT.TA</div>
@@ -36,6 +36,19 @@
         </div>
       </div>
       <!-- end top nav -->
+
+      <!-- nav menu -->
+      <div class="nav-overlay">
+        <div class="nav-overlay-content">
+          <a href="#">Shop</a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Clients</a>
+          <a href="#">Contact</a>
+        </div>
+      </div>
+      <!-- end nav menu-->
+
       <!-- social-icon -->
       <div class="sci">
         <i class="bx bxl-facebook-square"></i>
